--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "popper.js": "^1.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-native": "^0.77.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
