--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -1,5 +1,6 @@
-flask
-flask_session
+flask==2.0.1
+flask-cors==3.0.10
+python-dotenv==0.19.0
+flask-session==0.4.0
 load_dotenv
-flask_cors
 openai
