--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://your-production-url.com
+REACT_APP_API_URL="https://message-from-the-stars-flask-server-4g158r5cq.vercel.app/api"
