--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .env
+.env.development
+.env.production
 flask_session
 .node_modules
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
