--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ flask-cors==3.0.10
 python-dotenv==0.19.0
 flask-session==0.4.0
 werkzeug==2.0.1
-openai==1.0.0
+openai>=1.3.0
+httpx>=0.24.0,<0.25.0
