--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -3,4 +3,6 @@ flask-cors==3.0.10
 python-dotenv==0.19.0
 flask-session==0.4.0
 werkzeug==2.0.1
-openai==1.0.0
+openai==1.3.0
+httpx==0.24.1
+httpcore==0.18.0
