--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-flask==2.0.1
-flask-cors==3.0.10
+Flask==2.0.1
+Flask-Cors==3.0.10
+Flask-Session==0.4.0
 python-dotenv==0.19.0
-flask-session==0.4.0
-werkzeug==2.0.1
-openai==1.3.0
+openai==1.3.7
 httpx==0.24.1
+anyio==3.7.1
 httpcore==0.18.0
+werkzeug==2.0.1
